--- a/src/componentes/Botao/Botao.css
+++ b/src/componentes/Botao/Botao.css
@@ -13,3 +13,15 @@
 .botao:hover{
     color: #95ffd4;
 }
+
+.botaoDiv{
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 480px) {
+    .botao {
+        font-size: 16px;
+        padding: 16px;
+    }
+}
