--- a/src/componentes/CampoTexto/CampoTexto.css
+++ b/src/componentes/CampoTexto/CampoTexto.css
@@ -1,15 +1,15 @@
-.campo-texto{
+.campo-texto {
     margin: 24px 0;
 }
 
-.campo-texto label{
+.campo-texto label {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
     font-weight: bolder;
 }
 
-.campo-texto input{
+.campo-texto input {
     background-color: white;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
@@ -17,4 +17,15 @@
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+}
+
+@media (max-width: 480px) {
+    .campo-texto label {
+        font-size: 16px;
+    }
+
+    .campo-texto input {
+        font-size: 14px;
+        padding: 14px;
+    }
 }
