--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin: 80px 0;
+    width: 80vw;
 }
 
 .formaulario form{
@@ -10,4 +11,15 @@
     border-radius: 20px;
     padding: 36px 64px;
     box-shadow: 8px, 8px, 8px rgba(0, 0, 0, 0.08);
+}
+
+.formaulario h2 {
+    text-align: center;
+}
+
+@media (max-width: 480px) {
+    .formaulario h2 {
+        font-size: 16px;
+        text-align: center;
+    }
 }
