--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -3,9 +3,10 @@
 }
 
 .colaborador .cabecalho {
-    background-color:  #F0F0F0;
+    background-color: #F0F0F0;
     border-radius: 10px 10px 0px 0px;
 }
+
 .colaborador img {
     width: 100px;
     border-radius: 50%;
@@ -34,4 +35,24 @@
     line-height: 22px;
     color: #212121;
     padding: 0 16px;
+}
+
+@media (max-width: 480px) {
+    .colaborador {
+        width: 180px;
+    }
+
+    .colaborador img {
+        width: 70px;
+    }
+
+    .colaborador .rodape {
+        padding-top: 40px;
+        padding-bottom: 5px;
+    }
+
+    .colaborador .rodape h4,
+    .colaborador .rodape h5 {
+        font-size: 14px;
+    }
 }
