--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -1,18 +1,34 @@
-.time{
+.time {
     text-align: center;
     padding: 32px;
 }
 
-.time h3{
+.time h3 {
     font-size: 32px;
     border-bottom: 4px solid;
     display: inline-block;
     padding-bottom: 8px;
 }
 
-.time .colaboradores{
+.time .colaboradores {
     display: flex;
     justify-content: space-around;
     margin-top: 32px;
     flex-wrap: wrap;
+}
+
+@media (max-width: 480px) {
+    .time h3 {
+        font-size: 18px;
+        padding-bottom: 4px;
+        margin: 4px 0;
+    }
+
+    .time .colaboradores {
+        margin-top: 16px;
+    }
+
+    .time {
+        padding: 20px;
+    }
 }
