--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -1,4 +1,5 @@
 .colaborador {
+    position: relative;
     width: 280px;
     margin: 5px;
 }
@@ -76,4 +77,14 @@
     .colaborador .rodape h5 {
         font-size: 14px;
     }
+}
+
+.deletar{
+    position: absolute;
+    right: -10px;
+    top: -10px;
+}
+
+.favoritar{
+    margin-top: 20px;
 }
