--- a/src/componentes/Campo/Campo.css
+++ b/src/componentes/Campo/Campo.css
@@ -1,15 +1,15 @@
-.campo-texto {
+.campo {
     margin: 24px 0;
 }
 
-.campo-texto label {
+.campo label {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
     font-weight: bolder;
 }
 
-.campo-texto input {
+.campo input {
     background-color: white;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
@@ -19,12 +19,17 @@
     box-sizing: border-box;
 }
 
+.campo.campo-color input{
+    height: 40px;
+    padding: 5px 24px;
+}
+
 @media (max-width: 480px) {
-    .campo-texto label {
+    .campo label {
         font-size: 16px;
     }
 
-    .campo-texto input {
+    .campo input {
         font-size: 14px;
         padding: 14px;
     }
