--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,12 +1,14 @@
-.formaulario{
+.formaulario {
     display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px 50px;
     width: 80vw;
 }
 
-.formaulario form{
-    max-width: 80%;
+.formaulario form {
+    flex: 1;
     background-color: #f2f2f2;
     border-radius: 20px;
     padding: 36px 64px;
@@ -17,9 +19,19 @@
     text-align: center;
 }
 
+@media (max-width: 900px) {
+    .formaulario {
+        flex-direction: column;
+    }
+}
+
 @media (max-width: 480px) {
     .formaulario h2 {
         font-size: 18px;
         text-align: center;
+    }
+
+    .formaulario form {
+        padding: 36px 36px;
     }
 }
