--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -1,6 +1,7 @@
 .time {
     text-align: center;
     padding: 32px;
+    position: relative;
 }
 
 .time h3 {
@@ -31,4 +32,10 @@
     .time {
         padding: 20px;
     }
+}
+
+.input-cor{
+    position: absolute;
+    top: 20px;
+    right: 50px;
 }
