--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -2,6 +2,12 @@
     text-align: center;
     padding: 32px;
     position: relative;
+    margin-bottom: 10px;
+}
+
+.headColaborador {
+    display: flex;
+    flex-direction: column;
 }
 
 .time h3 {
@@ -9,6 +15,7 @@
     border-bottom: 4px solid;
     display: inline-block;
     padding-bottom: 8px;
+    margin: 15px;
 }
 
 .time .colaboradores {
@@ -32,10 +39,4 @@
     .time {
         padding: 20px;
     }
-}
-
-.input-cor{
-    position: absolute;
-    top: 20px;
-    right: 50px;
 }
